Fixes issue #1832 - Fix SonarCloud critical code smells